fix: change header, cameras z-indexes

--- a/src/app/header-component/header.component.scss
+++ b/src/app/header-component/header.component.scss
@@ -5,7 +5,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 99;
+  z-index: 200;
   width: 100%;
   height: 60px;
   background: #2d90eb;
