--- a/src/app/stream-component/stream.component.scss
+++ b/src/app/stream-component/stream.component.scss
@@ -57,7 +57,7 @@
     width: 49%;
     height: auto;
     margin-bottom: 3rem;
-    z-index: 1000;
+    z-index: 100;
   }
   &__placeholder {
     display: block;
